infra/k8s/cart-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-mongodb
  template:
    metadata:
      labels:
        app: cart-mongodb
    spec:
      containers:
        - name: cart-mongodb
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: cart-mongodb-service
spec:
  selector:
    app: cart-mongodb
  ports:
    - name: cart-mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
