infra/k8s/cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart
          image: yusufshakeel/pizza-microservice-backend-cart-service
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: cart-clusterip-service
spec:
  selector:
    app: cart
  ports:
    - name: cart
      protocol: TCP
      port: 10103
      targetPort: 10103
