infra/k8s/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: yusufshakeel/pizza-microservice-backend-payment-service
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: payment-clusterip-service
spec:
  selector:
    app: payment
  ports:
    - name: payment
      protocol: TCP
      port: 10104
      targetPort: 10104
