infra/k8s/product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: yusufshakeel/pizza-microservice-backend-product-service
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: product-clusterip-service
spec:
  selector:
    app: product
  ports:
    - name: product
      protocol: TCP
      port: 10102
      targetPort: 10102
