infra/k8s/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: yusufshakeel/pizza-microservice-backend-user-service
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: user-clusterip-service
spec:
  selector:
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 10101
      targetPort: 10101
