infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: pizza.localdev
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-clusterip-service
                port:
                  number: 10101
